<?xml version="1.0"?>
<package format="2">
  <name>generate_ros_cpp_struct</name>
  <version>0.0.0</version>
  <description>generate_ros_cpp_struct</description>

  <maintainer email="lujunhui@momenta.ai">lujunhui</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>can_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>recorder_msgs</depend>
  <depend>sensor_interface</depend>
  <depend>proto_msgs</depend>
</package>
