cmake_minimum_required(VERSION 2.8.3)
project(proto_msgs)
find_package(catkin REQUIRED COMPONENTS roscpp rospy message_generation std_msgs)
add_service_files(DIRECTORY srv)
add_message_files(DIRECTORY msg)
add_message_files(DIRECTORY msg/AVMOutputImageInfo)
add_message_files(DIRECTORY msg/common)
add_message_files(DIRECTORY msg/common_vehicle_param)
add_message_files(DIRECTORY msg/control_debug_info)
add_message_files(DIRECTORY msg/ehr)
add_message_files(DIRECTORY msg/ehr_sdmap)
add_message_files(DIRECTORY msg/ifly_parking_map)
add_message_files(DIRECTORY msg/localization_debug_info)
add_message_files(DIRECTORY msg/perception)
add_message_files(DIRECTORY msg/planning_debug_info)
add_message_files(DIRECTORY msg/prediction_debug_info)
add_message_files(DIRECTORY msg/sensor_image)
add_message_files(DIRECTORY msg/vehicle_service)


generate_messages(DEPENDENCIES std_msgs)
include_directories(${catkin_INCLUDE_DIRS})
catkin_package()
