cmake_minimum_required(VERSION 2.8.3)
project(struct_msgs)
find_package(catkin REQUIRED COMPONENTS roscpp rospy message_generation std_msgs)
add_service_files(DIRECTORY srv)
add_service_files(DIRECTORY srv/HMI)
add_message_files(DIRECTORY msg)
add_message_files(DIRECTORY msg/adas_function_c)
add_message_files(DIRECTORY msg/adas_function_debug_c)
add_message_files(DIRECTORY msg/avm_reload_result_c)
add_message_files(DIRECTORY msg/calib_info_c)
add_message_files(DIRECTORY msg/camera_hot_swap_c)
add_message_files(DIRECTORY msg/camera_perception_deceler_c)
add_message_files(DIRECTORY msg/camera_perception_feature_c)
add_message_files(DIRECTORY msg/camera_perception_groundline_c)
add_message_files(DIRECTORY msg/camera_perception_lane_lines_c)
add_message_files(DIRECTORY msg/camera_perception_objects_c)
add_message_files(DIRECTORY msg/camera_perception_occupancy_grid_c)
add_message_files(DIRECTORY msg/camera_perception_occupancy_objects_c)
add_message_files(DIRECTORY msg/camera_perception_parking_slot_c)
add_message_files(DIRECTORY msg/camera_perception_scene_c)
add_message_files(DIRECTORY msg/camera_perception_tsr_c)
add_message_files(DIRECTORY msg/can_raw_eth_data_c)
add_message_files(DIRECTORY msg/common_c)
add_message_files(DIRECTORY msg/control_command_c)
add_message_files(DIRECTORY msg/degraded_driving_function_c)
add_message_files(DIRECTORY msg/dtc_code_c)
add_message_files(DIRECTORY msg/ehr_c)
add_message_files(DIRECTORY msg/engineer_mode_c)
add_message_files(DIRECTORY msg/factory_calib_c)
add_message_files(DIRECTORY msg/fdl_trigger_c)
add_message_files(DIRECTORY msg/fdl_upload_state_c)
add_message_files(DIRECTORY msg/fm_info_c)
add_message_files(DIRECTORY msg/fsm_mcu_out_c)
add_message_files(DIRECTORY msg/func_state_machine_c)
add_message_files(DIRECTORY msg/fusion_deceler_c)
add_message_files(DIRECTORY msg/fusion_groundline_c)
add_message_files(DIRECTORY msg/fusion_objects_c)
add_message_files(DIRECTORY msg/fusion_objects_compress_c)
add_message_files(DIRECTORY msg/fusion_occupancy_objects_c)
add_message_files(DIRECTORY msg/fusion_parking_slot_c)
add_message_files(DIRECTORY msg/fusion_road_c)
add_message_files(DIRECTORY msg/fusion_road_compress_c)
add_message_files(DIRECTORY msg/fusion_spatial_parking_slot_c)
add_message_files(DIRECTORY msg/hmi_inner_c)
add_message_files(DIRECTORY msg/hmi_mcu_out_c)
add_message_files(DIRECTORY msg/hmi_service_c)
add_message_files(DIRECTORY msg/hmi_soc_outer_c)
add_message_files(DIRECTORY msg/ifly_localization_c)
add_message_files(DIRECTORY msg/ifly_mapping_status_c)
add_message_files(DIRECTORY msg/ifly_parking_map_c)
add_message_files(DIRECTORY msg/lidar_objects_c)
add_message_files(DIRECTORY msg/planning_hmi_c)
add_message_files(DIRECTORY msg/planning_plan_c)
add_message_files(DIRECTORY msg/post_sale_calibration_c)
add_message_files(DIRECTORY msg/prediction_c)
add_message_files(DIRECTORY msg/radar_perception_objects_c)
add_message_files(DIRECTORY msg/sensor_gnss_c)
add_message_files(DIRECTORY msg/sensor_image_c)
add_message_files(DIRECTORY msg/sensor_imu_c)
add_message_files(DIRECTORY msg/sensor_lidar_c)
add_message_files(DIRECTORY msg/sensor_radar_c)
add_message_files(DIRECTORY msg/sentinel_mode_c)
add_message_files(DIRECTORY msg/system_monitor_c)
add_message_files(DIRECTORY msg/system_version_c)
add_message_files(DIRECTORY msg/time_synchronization_c)
add_message_files(DIRECTORY msg/uss_model_info_c)
add_message_files(DIRECTORY msg/uss_perception_debug_info_c)
add_message_files(DIRECTORY msg/uss_perception_info_c)
add_message_files(DIRECTORY msg/uss_wave_debug_info_c)
add_message_files(DIRECTORY msg/uss_wave_info_c)
add_message_files(DIRECTORY msg/vehicle_service_c)

generate_messages(DEPENDENCIES std_msgs)
include_directories(${catkin_INCLUDE_DIRS})
catkin_package()
